[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-c"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
lb-api-service                = { workspace = true }
lb-chain-service              = { workspace = true }
lb-core                       = { workspace = true }
lb-cryptarchia-engine         = { workspace = true }
lb-groth16                    = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-node                       = { default-features = true, workspace = true }
lb-wallet-service             = { workspace = true }
log                           = { workspace = true }
multiaddr                     = { default-features = false, version = "0.18" }
num-bigint                    = { default-features = false, version = "0.4" }
overwatch                     = { workspace = true }
serde_json                    = { workspace = true }
tokio                         = { features = ["rt-multi-thread"], workspace = true }

[build-dependencies]
cbindgen = "0.29"

[lib]
crate-type = ["cdylib"]
name       = "logos_blockchain"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["cbindgen"] # machete does not recognize this for build dep and complains.
