[package]
authors     = ["Daniel Sanchez Quiros <danielsq@status.im>"]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-core"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
ark-ff                        = { default-features = false, version = "0.4" }
bincode                       = "1.3"
blake2                        = { default-features = false, version = "0.10" }
bytes                         = { workspace = true }
const-hex                     = { default-features = false, features = ["alloc"], version = "1" }
futures                       = { default-features = false, features = ["alloc"], version = "0.3" }
generic-array                 = "1.2.0"
hex                           = { default-features = false, features = ["alloc"], version = "0.4" }
lb-blend-proofs               = { workspace = true }
lb-cryptarchia-engine         = { features = ["serde"], workspace = true }
lb-groth16                    = { features = ["deser"], workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-poc                        = { workspace = true }
lb-pol                        = { workspace = true }
lb-poseidon2                  = { workspace = true }
lb-utils                      = { workspace = true }
lb-utxotree                   = { workspace = true }
multiaddr                     = { default-features = false, version = "0.18" }
nom                           = { default-features = false, features = ["alloc"], version = "8" }
num-bigint                    = { default-features = false, version = "0.4" }
serde                         = { workspace = true }
strum                         = { features = ["derive"], version = "0.27" }
thiserror                     = "1.0"
tracing                       = { workspace = true }

[dev-dependencies]
rand       = { workspace = true }
serde_json = { default-features = false, features = ["alloc"], version = "1.0" }

[features]
default      = []
mock         = []
pol-dev-mode = []
