[package]
authors     = ["Daniel Sanchez Quiros <danielsq@status.im>"]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-core"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
ark-ff                        = { workspace = true }
bincode                       = { workspace = true }
blake2                        = { workspace = true }
bytes                         = { workspace = true }
const-hex                     = { features = ["alloc"], workspace = true }
futures                       = { features = ["alloc"], workspace = true }
hex                           = { features = ["alloc"], workspace = true }
lb-blend-proofs               = { workspace = true }
lb-cryptarchia-engine         = { workspace = true }
lb-groth16                    = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-mmr                        = { workspace = true }
lb-poc                        = { workspace = true }
lb-pol                        = { workspace = true }
lb-poseidon2                  = { workspace = true }
lb-utils                      = { workspace = true }
lb-utxotree                   = { workspace = true }
multiaddr                     = { workspace = true }
nom                           = { features = ["alloc"], workspace = true }
num-bigint                    = { workspace = true }
rpds                          = { workspace = true }
serde                         = { features = ["derive"], workspace = true }
strum                         = { features = ["derive"], workspace = true }
thiserror                     = { workspace = true }
time                          = { workspace = true }
tracing                       = { workspace = true }

[dev-dependencies]
divan      = { workspace = true }
hasher     = { workspace = true }
rand       = { workspace = true }
serde_json = { features = ["alloc"], workspace = true }
tokio      = { workspace = true }

[[bench]]
harness = false
name    = "mantle_tx_components"

[features]
default = []
