[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-ledger"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
derivative                    = { workspace = true }
lb-blend-crypto               = { workspace = true }
lb-blend-message              = { workspace = true }
lb-blend-proofs               = { workspace = true }
lb-core                       = { workspace = true }
lb-cryptarchia-engine         = { workspace = true }
lb-groth16                    = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-mmr                        = { workspace = true }
lb-pol                        = { workspace = true }
lb-utils                      = { workspace = true }
lb-utxotree                   = { workspace = true }
num-bigint                    = { workspace = true }
rand                          = { workspace = true }
rpds                          = { workspace = true }
serde                         = { features = ["derive"], workspace = true }
serde_arrays                  = { workspace = true }
thiserror                     = { workspace = true }
tracing                       = { workspace = true }

[dev-dependencies]
rand = { features = ["std", "std_rng"], workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_arrays"]
